--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
-
+@import url('icons/style.css');
 
 * {
     margin: 0;
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: red;
+    background-color: black;
     display: flex;
     flex-direction: column;
     color: white;
@@ -18,15 +18,21 @@ body {
     height: 100vh
 }
 
+.ic_couch {
+    font-family: 'iconfont';
+    font-size: 16px;
+    color: white;
+    margin-right: 10px;
+}
 
-.seat {
+/*.seat {
     background-color: cornflowerblue;
     height: 12px;
     width: 15px;
     margin: 3px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-}
+}*/
 
 .row {
     display: flex;
@@ -55,12 +61,12 @@ body {
     transform: scale(1.2);
 }
 
-.showcase .seat:not(.occupied):hover {
+.legend .seat:not(.occupied):hover {
     cursor: default;
     transform: scale (1);
 }
 
-.showcase {
+.legend {
     padding: 5px 10px;
     border-radius: 5px;
     color: #777;
@@ -69,14 +75,14 @@ body {
     justify-content: space-between;
 }
 
-.showcase li {
+.legend li {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0 20px;
 }
 
-.showcase li small {
+.legend li small {
     margin-left: 10px;
 }
 
@@ -111,7 +117,7 @@ p.text span {
   
   .movie {
     width: 200px;
-    height: 300px;
+    height: 330px;
     margin-right: 20px;
     text-align: center;
     background-color: #fff;
@@ -146,8 +152,10 @@ p.text span {
     margin-bottom: 25px;
   }
 
-  
-  .ic_seat {
-    font-size: 32px;
-    color: rgb(51, 51, 51);
+
+  .ic_couch {
+    font-family: 'iconfont';
+    font-size: 16px;
+    color: white;
+    margin-right: 10px;
   }
