--- a/index.css
+++ b/index.css
@@ -7,6 +7,19 @@
     box-sizing: border-box;
 }
 
+:root {
+    --color-white: #ffffff;
+    --color-green: #249218;
+    --color-orange: #ffa500;
+    --color-blue: #7f87cb;
+    --color-grey: #777777;
+    --color-light-grey: #e6e6e6;
+    --color-shadow: #ffffffbf;
+    --color-black: #000000;
+    --color-light-black: #292929;
+    --color-red: #830505;
+}  
+
 body {
     background-image: url('/images/Cinema.jpeg');
     background-repeat: no-repeat;
@@ -14,7 +27,7 @@ body {
     background-size: cover;
     display: flex;
     flex-direction: column;
-    color: white;
+    color: var(--color-white);
     font-family: 'Questrial', sans-serif;
     align-items: center;
 }
@@ -23,17 +36,17 @@ body {
     font-family: 'iconfont';
     font-size: 18px;
     font-weight: 500;
-    color: rgb(36, 146, 36);
+    color: var(--color-green);
     margin-right: 10px;
     margin-bottom: 10px;
 }
 
 .ic_couch.selected {
-    color: #ffa500;
+    color: var(--color-orange);
 }
 
 .ic_couch.occupied {
-    color: rgb(127, 135, 203);
+    color: var(--color-blue);
 }
 .ic_couch:nth-of-type(4) {
     margin-right: 20px;
@@ -63,7 +76,7 @@ body {
 .legend {
     padding: 5px 10px;
     border-radius: 5px;
-    color: #777;
+    color: var(--color-grey);
     list-style-type: none;
     display: flex;
     justify-content: space-between;
@@ -81,7 +94,7 @@ body {
 }
 
 .screen {
-    background-color: rgba(255, 255, 255, 0.893);
+    background-color: var(--color-light-grey);
     height: 70px;
     width: 100%;
     margin: 15px 0;
@@ -100,7 +113,7 @@ p.text {
 }
 
 p.text span {
-    color:#ffa500
+    color: var(--color-orange)
 }
 
 .movies-container {
@@ -115,8 +128,8 @@ p.text span {
     height: 290px;
     margin-right: 20px;
     text-align: center;
-    background-color: #fff;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+    background-color:var(--color-white);
+    box-shadow: 0px 3px 6px var(--color-black);
     border-radius: 5px;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
@@ -141,12 +154,12 @@ p.text span {
   .movie h3 {
     margin-top: 10px;
     font-size: 18px;
-    color: #333;
+    color: var(--color-light-black)
   }
   
   h2 {
     margin-top: 30px;
     margin-bottom: 25px;
-    color: rgba(131, 5, 5, 0.709);
+    color: var(--color-red);
     font-weight: 800;
   }
