--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ body {
 
 p.text {
     margin: 5 px 0;
-
+    font-size: 18px;
 }
 
 p.text span {
@@ -121,9 +121,9 @@ p.text span {
     flex-wrap: nowrap;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
-  }
+}
   
-  .movie {
+.movie {
     width: 200px;
     height: 290px;
     margin-right: 20px;
@@ -133,33 +133,50 @@ p.text span {
     border-radius: 5px;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
-  }
+}
   
-  .movie:hover {
+.movie:hover {
     transform: scale(1.02);
     box-shadow: 0 0 10px rgba(221, 72, 38, 0.5), 0 0 20px #ca8e78;
-  }
+}
   
-  .movie:last-child {
+.movie:last-child {
     margin-right: 0;
-  }
+}
   
-  .movie img {
+.movie img {
     width: 200px;
     height: 250px;
     object-fit: cover;
     border-radius: 5px;
-  }
+}
   
-  .movie h3 {
+.movie h3 {
     margin-top: 10px;
     font-size: 18px;
     color: var(--color-light-black)
-  }
+}
   
-  h2 {
-    margin-top: 30px;
+h2 {
+    margin-top: 15px;
     margin-bottom: 25px;
     color: var(--color-red);
     font-weight: 800;
-  }
+}
+
+button#clear-selection {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: var(--color-red);
+    color: var(--color-white);
+    border: none;
+    border-radius: 5px;
+    font-family: 'Questrial', sans-serif;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button#clear-selection:hover {
+    transform: scale(1.05);
+}
